<resources>
    <string name="app_name">Nekkta</string>

    <string name="done">Done</string>
    <string name="custom_adapter_intent_values">Custom_adapter_Values</string>
    <string name="user_selection">User_selction</string>
    <string name="text_here">Text Here</string>
    <string name="met_before">"Hey i am Nekkta! \nHave we met before?"</string>

    <string name="title_activity_fullscreen">Nekkta </string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">Nekkta Community</string>


    <string name="yes_log_in">Yes. Log In</string>
    <string name="no_create_account">No. Create An Account</string>


    <string name="meet_again_know_better">Hey again, nice to meet you. I will be \n
    realtime savings manager. but First i would like to know you better.
    </string>

    <!--register user-->
    <string name="fb_sign_in">Sign in with Facebook</string>
    <string name="fb_sign_up">Sign Up with Facebook</string>
    <string name="or">or</string>
    <string name="agree_terms">Agree to the <u><b>terms and conditions</b></u></string>
    <string name="forgot_password">Forgot Password</string>
    <string name="not_a_member">Not a member ?</string>
    <string name="have_an_account">Have an Account ?</string>
    <string name="sign_up_here"><u>Sign Up Here</u></string>
    <string name="sign_in_here"><u>Sign In Here</u></string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="email_or_user_name">Email or  User Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="user_number">User Name</string>


    <string name="first_name_ask">What is your first name?</string>
    <string name="first_name_placeholder">first_name</string>
    <string name="second_name_ask">What is your second name?</string>
    <string name="second_name_placeholder">second_name</string>
    <string name="email_ask">Please text me your email address</string>
    <string name="email_placeholder">user_email</string>
    <string name="password_placeholder">user_password</string>
    <string name="password">User Password</string>
    <string name="user_year_of_birth">user_year_of_birth</string>
    <string name="phone_ask">Have a phone number!</string>
    <string name="phone_number_placeholder">user_phone_numbe</string>
    <string name="age_ask">Great, almost done please select your age so that we can begin</string>
    <string name="email_error">This is not a valid email address</string>
    <string name="password_error">The password should have one lower case letter and upper case and a number</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--feeds interactions-->
    <string name="comment">Comment</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="archive">Archive</string>


    <!-- online interaction strings-->
    <string name="save_user">save_user</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_bucket">Buckets</string>
    <string name="title_community">Community</string>
    <string name="title_account">Account</string>
    <string name="title_profile">Profile</string>
    <string name="trending_suggestions">Trending &amp; Suggestions</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="dashboard">Dashboard</string>


    <!--Buckets Strings-->
    <string name="new_bucket">New Bucket</string>
    <string name="create">Create Bucket</string>
    <string name="new_bucket_name">Bucket Name</string>
    <string name="target_amount">Target Amount</string>
    <string name="target_time">Select Target Time</string>
    <string name="selected_year">Year</string>
    <string name="selected_month">Month</string>
    <string name="selected_Day">Day</string>
    <string name="mobile_money">Mobile Money</string>
    <string name="bank_client">Bank Client</string>
    <string name="deposit_funds">Deposit Funds</string>
    <string name="select_privacy">Privacy</string>
    <string name="selected_privacy_public">Public</string>
    <string name="selected_privacy_private">Private</string>
    <string name="selected_privacy_my_contacts">My Contacts</string>
    <string name="pick_date">Pick Date</string>




    <!--facebook id-->
    <string name="facebook_app_id">127035157936099</string>
    <string name="lists">Lists</string>

</resources>
