<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/account_drawable"
            android:title="@string/title_profile" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/view_suggestion_drawable"
            android:title="@string/lists" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/archive_drawable"
            android:title="@string/archive" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share_drawable"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/common_full_open_on_phone"
                android:title="Send" />
        </menu>
    </item>

</menu>
