<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.abednego.myapplication.activities.Register">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/nekkta_icon" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sp_7"
            android:layout_marginLeft="@dimen/sp_7">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/register_questioner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/met_before"
                android:textSize="@dimen/sp_24" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recy_answers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/register_questioner"
                android:textAlignment="textEnd">

            </android.support.v7.widget.RecyclerView>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_below="@+id/recy_answers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                app:hintEnabled="true"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/typed_response"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_here" />

            </android.support.design.widget.TextInputLayout>

            </android.support.v7.widget.LinearLayoutCompat>


        </RelativeLayout>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sp_7"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/sp_34" />


    </android.support.v7.widget.LinearLayoutCompat>


</RelativeLayout>
